korrekturen von Jürgen eingebaut auf der Indienreise und Kollatation von Kolkata 1 K1

--- a/intro.bib
+++ b/intro.bib
@@ -1,4 +1,17 @@
-﻿@incollection{ohanlon2011religious,
+﻿@incollection{rodrigues2023,
+  author    = {Pravina Rodrigues},
+  title     = {Kinesics, Proxemics, and Haptics: A Śākta Method for Comparative Theology},
+  booktitle = {The Wiley Blackwell Companion to Comparative Theology: A Festschrift in Honor of Francis X. Clooney, SJ},
+  editor    = {Axel Takacs and Joseph Kimmel},
+  publisher = {John Wiley \& Sons Ltd.},
+  year      = {2023},
+  chapter   = {7},
+  keywords     = {seclit},
+   pages        = {63--76},
+  
+}
+
+@incollection{ohanlon2011religious,
   author       = {O’Hanlon, Rosalind and Washbrook, David},
   title        = {Religious Cultures in an Imperial Landscape},
   booktitle    = {Religious Cultures in Early Modern India: New Perspectives},
