Korrekturen Jürgen alle drin finish in Varanasi Mark Cafe

--- a/intro.bib
+++ b/intro.bib
@@ -3079,8 +3079,8 @@ address={Pondicherry},
 }%!
 
 @misc{vasisthasamhita,
-    title={Vasiṣṭḥasaṃhitā},
-    subtitle={Vasiṣṭḥasaṃhitā (revised edition)},
+    title={Vasiṣṭhasaṃhitā},
+    subtitle={Vasiṣṭhasaṃhitā (revised edition)},
     editor={Digambarji, Swami and Maheshananda, Swami and Sharma, B. R. and Sahay, R. K. and Bodhe E. K.},
     year={2005},
     publisher={Kaivalyadhāma Śrīmanmādhav Yogamandir Samiti},
