--- a/intro.tex
+++ b/intro.tex
@@ -24695,17 +24695,17 @@ According to Nārāyaṇatīrtha, the devout worship of Īśvara (\textit{īśva
 
 \textit{Praṇidhāna} can be practiced in four ways: the highest (\textit{paramamukhya}), the most excellent (\textit{mukhya}), the one belonging to the most excellent (\textit{mukhyajātīya}), and the almost excellent (\textit{mukhyakalpa}).\footnote{Cf. ibid. 1.32 (Ed. p. 50): \textit{tac ca caturvidham paramamukhyaṃ, mukhyaṃ mukhyajātīyaṃ, mukhyakalpañ ceti} |} All four methods serve the progressive fixation of the mind on Īśvara and are based on the expositions of the \textit{Bhagavadgītā} 12.8-11.
 
-The first type (\textit{paramamukhya}) of devout worship is the loving and continuous fixation of the mind and intellect on Īśvara. This form of \textit{praṇidhāna} is compared to the devotion and love of the Gopīs for Kṛṣṇa. The mind of the Gopī melts upon hearing the multitude of divine qualities and, like molten copper poured into a mold, firmly takes its shape.\footnote{Cf. ibid. 1.32 (Ed. p. 50): \textit{tatrādyaṃ gopīnām iva tadguṇagaṇaśravaṇādinā drutacetaso drutatām rasyeva dṛḍhatadākāratā tadviṣayakavṛttipravāharūpaṃ prema mayy eva mana ādhatsva mayiṃ buddhiṃ niveśaya} | \textit{ity ādinoktam} | \textit{anena premabhaktiyogo darśitaḥ} | \textit{sa ca parameśvaracaraṇāravindaviṣayakaikāntikātyantikapremapravāho 'navacchinna ity arthaḥ} |}
+The first type (\textit{paramamukhya}) of devout worship is the loving and continuous fixation of the mind and intellect on Īśvara. This form of \textit{praṇidhāna} is compared to the devotion and love of the Gopīs for Kṛṣṇa. The mind of the Gopī melts upon hearing the multitude of divine qualities and, like molten copper poured into a mold, firmly takes its shape.\footnote{Cf. ibid. 1.32 (Ed. p. 50): \textit{tatrādyaṃ gopīnām iva tadguṇagaṇaśravaṇādinā drutacetaso druta\-tāmarasyeva dṛḍhatadākāratā tadviṣayakavṛttipravāharūpaṃ prema mayy eva mana ādhatsva mayiṃ buddhiṃ niveśaya} | \textit{ityādinoktam} | \textit{anena premabhaktiyogo darśitaḥ} | \textit{sa ca parameśvaracaraṇāravindaviṣayakaikāntikātyantikapremapravāho 'navacchinna ity arthaḥ} |}
 
-The second type (\textit{mukhya}) is also known as the practice of \textit{nididhyāsana}. If the first type is impossible, this form should be adopted initially. It is characterized by repeatedly drawing back the outwardly directed and wandering mind through practice and focusing it on the exalted self within.\footnote{Cf. ibid. 1.32 (Ed. p. 50): \textit{dvitīyaṃ tadasāmarthye bahiḥpravṛttisvabhāvasya manasaḥ pratyāhāreṇa punaḥ punarbhagavatyātmani niveśanarūpo 'bhyāso nididhyāsanākhyaḥ}u | To illustrate this explanation, Nārāyaṇatīrtha quotes \textit{Bhagavadgītā} 12.9: \textit{atha cittaṃ samādhātuṃ na śaknoṣi mayi sthiram} | \textit{abhyāsayogena tato mām icchāptuṃ dhanañjaya} || \textit{ity ādy uktam} |} This variant is intended for practitioners who are unable to maintain the mental constancy required for the first method.
+The second type (\textit{mukhya}) is also known as the practice of \textit{nididhyāsana}. If the first type is impossible, this form should be adopted initially. It is characterized by repeatedly drawing back the outwardly directed and wandering mind through practice and focusing it on the exalted self within.\footnote{Cf. ibid. 1.32 (Ed. p. 50): \textit{dvitīyaṃ tadasāmarthye bahiḥpravṛttisvabhāvasya manasaḥ pratyāhāreṇa punaḥ punarbhagavatyātmani niveśanarūpo 'bhyāso nididhyāsanākhyaḥ} | To illustrate this explanation, Nārāyaṇatīrtha quotes \textit{Bhagavadgītā} 12.9: \textit{atha cittaṃ samādhātuṃ na śaknoṣi mayi sthiram} | \textit{abhyāsayogena tato mām icchāptuṃ dhanañjaya} || \textit{ityādy uktam} |} This variant is intended for practitioners who are unable to maintain the mental constancy required for the first method.
 
-For those who cannot fix their mind on the Supreme God through love or constant repetition, the third type (\textit{mukhyajātīya}) is recommended. That primarily involves devout service to God, such as recitation of God's name, fasting, etc. This service and all actions, good or bad, should be dedicated to the Supreme God without attachment to the results.\footnote{Cf. ibid. 1.32 (Ed. p. 50): \textit{tṛtīyan tu tadasāmarthye 'pi svabhāvata eva kṛtānām api karmaṇāṃ phalecchāṃ tyaktvā parameśvare paramagurāvarpaṇam sādhu vā 'sādhu vā karma yadyadācaritaṃ mayā} | \textit{tatsarvaṃ tvayi saṃnyastaṃ tvatprayuktaḥ karomy aham} || \textit{iti saṃkalpaviśeṣarūpam} |}
+For those who cannot fix their mind on the Supreme God through love or constant repetition, the third type (\textit{mukhyajātīya}) is recommended. That primarily involves devout service to God, such as recitation of God's name, fasting, etc. This service and all actions, good or bad, should be dedicated to the Supreme God without attachment to the results.\footnote{Cf. ibid. 1.32 (Ed. p. 50): \textit{tṛtīyan tu tadasāmarthye 'pi svabhāvata eva kṛtānām api karmaṇāṃ phalecchāṃ tyaktvā parameśvare paramagurāv arpaṇam sādhu vā 'sādhu vā karma yad yad ācaritaṃ mayā} | \textit{tatsarvaṃ tvayi saṃnyastaṃ tvatprayuktaḥ karomy aham} || \textit{iti saṃkalpaviśeṣarūpam} |}
 
-The fourth type (\textit{mukhyakalpa}) is finally for those who cannot yet practice the third type, the devout service to God. Here, the practitioner is encouraged to renounce the fruits of all actions and to rest in the self.\footnote{Cf. ibid. 1.32 (Ed. p. 50): \textit{athaitad apy aśakto 'si kartṛṃ madyogam āśritaḥ} | \textit{sarvakarmaphalatyāgaṃ tataḥ kuru yatātmavān} || \textit{ity ādinoktaṃ bhagavadgītādvādaśādhyāye} |}
+The fourth type (\textit{mukhyakalpa}) is finally for those who cannot yet practice the third type, the devout service to God. Here, the practitioner is encouraged to renounce the fruits of all actions and to rest in the self.\footnote{Cf. ibid. 1.32 (Ed. p. 50): \textit{athaitad apy aśakto 'si kartuṃ madyogam āśritaḥ} | \textit{sarvakarmaphalatyāgaṃ tataḥ kuru yatātmavān} || \textit{ity ādinoktaṃ bhagavadgītādvādaśādhyāye} |}
 
-In the context of the repeated practice [of concentration] on a single principle to eliminate the nine disturbances of \textit{Yogasūtra} 1.32, Nārāyaṇatīrtha identifies the one principle (\textit{ekatattva}) as the Supreme God, and the practice (\textit{abhyāsa}) as Premabhaktiyoga. Premabhaktiyoga, he asserts, is the culmination of all the methods above. Moreover, according to Nārāyaṇatīrtha, Premabhaktiyoga unites both results: the removal of disturbances and the reception of God's grace.\footnote{Cf. \textit{Yogasiddhāntacandrikā} 1.32 (Ed. pp. 50-51): \textit{atra ca praṇidhānaśabdenoktam} | \textit{tatra nididhyāsanaṃ samānaviṣayatayā sākṣātkāra janakatvasādhanaṃ karmādi yogebhyaścāntaraṅgamityabhipretya, arthabhāvanaśabdena pūrvamādṛtaṃ yady api tathāpy adṛṣṭadvārā kṛpātiśayaphalakādantarāyābhāvaphalakāc ca }| \textit{tasmāt paramaṃ mukhyaṃ bhaktiyogaṃ sarvopāyaphalabhūtam ayam ata eva tadubhayaphalakaṃ premākhyam abhyāsam āha- tatpratiṣedhārthamekatattvābhyāsaḥ} || 32 || \textit{tatpratiṣedheti} | \textit{teṣāṃ vikṣepāṇāṃ pratiṣedhārtham anāyāsena nāśārthaṃ ekasmiṃs tattve mukhyabhagati, abhyāsaḥ gopīnām iva tadguṇagaṇaśravaṇādinā dravībhūtasya cetaso mūṣānikṣiptadrutatām rasyeva dṛḍhatadākāratārūpaprema abhyāsayogayuktena cetasā nānyagāminā} | \textit{ity ādinā bhagavatsūcitaḥ kārya ityarthaḥ} | \textit{yad balād anāyāsena sampannāyāṃ jīvanmuktau vikṣepāḥ praśamam upayānti} | \textit{na vāsudevabhaktānām aśubhaṃ vidyate kvacit} | \textit{ity ādismṛteḥ} |}
+In the context of the repeated practice [of concentration] on a single principle to eliminate the nine disturbances of \textit{Yogasūtra} 1.32, Nārāyaṇatīrtha identifies the one principle (\textit{ekatattva}) as the Supreme God, and the practice (\textit{abhyāsa}) as Premabhaktiyoga. Premabhaktiyoga, he asserts, is the culmination of all the methods above. Moreover, according to Nārāyaṇatīrtha, Premabhaktiyoga unites both results: the removal of disturbances and the reception of God's grace.\footnote{Cf. \textit{Yogasiddhāntacandrikā} 1.32 (Ed. pp. 50-51): \textit{atra ca praṇidhānaśabdenoktam} | \textit{tatra nididhyāsanaṃ samānaviṣayatayā sākṣātkārajanakatvasādhanaṃ karmādi yogebhyaś cāntaraṅgam ity abhipretya, arthabhāvanaśabdena pūrvam ādṛtaṃ yady api tathāpy adṛṣṭadvārā kṛpātiśayaphalakād antarāyābhāvaphalakāc ca }| \textit{tasmāt paramaṃ mukhyaṃ bhaktiyogaṃ sarvopāyaphalabhūtamayam ata eva tadubhayaphalakaṃ premākhyam abhyāsam āha- tatpratiṣedhārthamekatattvābhyāsaḥ} || 32 || \textit{tatpratiṣedheti} | \textit{teṣāṃ vikṣepāṇāṃ pratiṣedhārtham anāyāsena nāśārthaṃ ekasmiṃs tattve mukhyabhagati, abhyāsaḥ gopīnām iva tadguṇagaṇaśravaṇādinā dravībhūtasya cetaso mūṣānikṣiptadrutatāmrasyeva dṛḍhatadākāratārūpaprema abhyāsayogayuktena cetasā nānyagāminā} | \textit{ity ādinā bhagavatsūcitaḥ kārya ityarthaḥ} | \textit{yadbalād anāyāsena sampannāyāṃ jīvanmuktau vikṣepāḥ praśamam upayānti} | \textit{na vāsudevabhaktānām aśubhaṃ vidyate kvacit} | \textit{ity ādismṛteḥ} |}
 
-The continuous flow of mental fluctuations (\textit{vṛttipravāha}) generated within the framework of Premabhaktiyoga can be practised either with qualities (\textit{saguṇa}) and distinctions (\textit{savikalpa}), focusing on a specific form of God, such as Vāsudeva mentioned by Nārāyaṇatīrtha, or without qualities (\textit{nirguṇa}) and without distinctions (\textit{nirvikalpa}), focusing on the "indivisible reality, free from internal, external, and contradictory distinctions, not overlaid with any attributes, which is the true, inseparable essence" (\textit{ekaṃ sajātīvijātīyasvagatabhedarahitaṃ tattvamanāropitam akhaṇḍārtha}).\footnote{Cf. ibid. 1.32 (Ed. pp. 51-52): \textit{athavā ekaṃ sajātīvijātīyasvagatabhedarahitaṃ tattvamanāropitam akhaṇḍārtha iti yāvat} | \textit{tasya abhyāsaḥ tad ekam ajaram amṛtam abhayam iti vṛttipravāhaḥ kārya ity arthaḥ} |\textit{atrātmavyatirekeṇa dvitīyaṃ yo na paśyati} | \textit{ātmarāmaḥ sa yogīndro brahmībhūto bhaved iha} || \textit{ātmakrīḍasya satataṃ sadātmamithunasya ca} | \textit{ātmany eva sutṛptasya yogasiddhir adūrataḥ} || \textit{abhiyogāt sadābhyāsāt tatraiva ca viniścayāt} | \textit{punaḥ punaranirvedāt siddhyed yogo na cānyathā} || \textit{iti skandokteḥ} | \textit{tasmāt saguṇātmavadākārākāradhārāvāhivṛttipravāhaḥ savikalpo nirguṇagocaro dhārāvāhiko nirvikalpako vā kāryo 'nāyāsena mokṣam icchateti yāvat} || 32 ||}
+The continuous flow of mental fluctuations (\textit{vṛttipravāha}) generated within the framework of Premabhaktiyoga can be practised either with qualities (\textit{saguṇa}) and distinctions (\textit{savikalpa}), focusing on a specific form of God, such as Vāsudeva mentioned by Nārāyaṇatīrtha, or without qualities (\textit{nirguṇa}) and without distinctions (\textit{nirvikalpa}), focusing on the "indivisible reality, free from internal, external, and contradictory distinctions, not overlaid with any attributes, which is the true, inseparable essence" (\textit{ekaṃ sajātī vijātīyasvagatabhedarahitaṃ tattvam anāropitam akhaṇḍārtha}).\footnote{Cf. ibid. 1.32 (Ed. pp. 51-52): \textit{athavā ekaṃ sajātīvijātīyasvagatabhedarahitaṃ tattvam anāropitam akhaṇḍārtha iti yāvat} | \textit{tasya abhyāsaḥ tad ekam ajaram amṛtam abhayam iti vṛttipravāhaḥ kārya ity arthaḥ} |\textit{atrātmavyatirekeṇa dvitīyaṃ yo na paśyati} | \textit{ātmarāmaḥ sa yogīndro brahmībhūto bhaved iha} || \textit{ātmakrīḍasya satataṃ sadātmamithunasya ca} | \textit{ātmany eva sutṛptasya yogasiddhir adūrataḥ} || \textit{abhiyogāt sadābhyāsāt tatraiva ca viniścayāt} | \textit{punaḥ punaranirvedāt siddhyed yogo na cānyathā} || \textit{iti skandokteḥ} | \textit{tasmāt saguṇātmavadākārākāradhārāvāhivṛttipravāhaḥ savikalpo nirguṇagocaro dhārāvāhiko nirvikalpako vā kāryo 'nāyāsena mokṣam icchateti yāvat} || 32 ||}
 
 Nārāyaṇatīrtha further emphasizes the particular significance of Premabhaktiyoga in his commentary on \textit{Yogasūtra} 2.45. Here, it is \textit{īśvarapraṇidhāna} in the form of \textit{premabhakti}, which leads the yogin to the grace of God, which is required for the perfection of \textit{samādhi}.\footnote{Cf. ibid. 1.32 (Ed. p. 107): \textit{īśvarapraṇidhānasādhyasiddhim āha- samādhisiddharīśvarapraṇidhānāt} || 45 || \textit{samādhīti} | \textit{īśvarapraṇidhānaṃ pūrvaṃ vyākhyātam} | \textit{samādher uktalakṣaṇasya siddhir apratibandhenānāyāsena tatkṛpayā gurvādidvārā ca dṛḍhā prāptir bhavatīty arthaḥ} | \textit{etac ca phalaṃ premabhakteḥ svataḥ puruṣārtharūpāyā nāntarīyakaṃ yathā phalārthino vṛkṣādisānnidhyec chāyāṃ gandhādir ity anyatra vistaraḥ} || 45 ||} Thus, this passage also clarifies why Nārāyaṇatīrtha places Premabhaktiyoga at the pinnacle of his yoga methods.
 
