corrections of Jü and Stani complete and Jim half way until xxiii

--- a/intro.bib
+++ b/intro.bib
@@ -11,6 +11,15 @@
   
 }
 
+@misc{nadicakra,
+   title={Nāḍīcakra},
+   %author={Devendra},
+   howpublished={Acc. No. 1334. Oriental Research Institute, Srinagar.},
+   %address={National Archives Kathmandu},
+   %shorthand={S\textlowerscript{1}},
+   keywords={primary},
+}%!
+
 @incollection{ohanlon2011religious,
   author       = {O’Hanlon, Rosalind and Washbrook, David},
   title        = {Religious Cultures in an Imperial Landscape},
@@ -922,7 +931,7 @@ keywords={primary},
 }%!
 
 @misc{tantralokax,
-  title={Tantrāloka},
+  title={Tantrāloka (a)},
   subtitle={The Tantrāloka of Abhinavagupta. With Commentary Viveka by Jayadratha. In 8 volumes.},
   editor={Dwivedi, R. C. and Rastogi, Navjivan},
   year={1987},
@@ -1868,7 +1877,10 @@ keywords={seclit},
 @article{birch2019,
  title={The Amaraughaprabodha: New Evidence on the Manuscript Transmission of an Early Work on Haṭha- and Rājayoga},
  author= {Birch, Jason},
- year={2019},
+ year={2019},a
+ series={Journal of Indian Philosophy},
+ volume={47},
+ pages={947--977},
  publisher={Springer Netherlands},
  address={Dordrecht},
  url={https://link.springer.com/article/10.1007/s10781-019-09401-5},
@@ -1903,6 +1915,8 @@ keywords={seclit}
 @book{hanneder2006,
  title={Studies on the Mokṣopaya}, 
  author={Hanneder, Jürgen},
+ series={Zeitschrift der Deutschen Morgenländischen Gesellschaft}, 
+ volume={160},
  year={2006},
  publisher={Deutsche Morgenländische Gesellschaft, Harrasowitz Verlag}, 
  address={Wiesbaden},
@@ -1913,9 +1927,11 @@ keywords={seclit}
   title     = {Mokṣopāya},
   subtitle  = {Mokṣopāya. Textedition, Teil 1. Das erste und zweite Buch: Vairāgyaprakaraṇa, Mumukṣuvyahāraprakaraṇa},
   howpublished = {Anonymus Casmiriensis},
+  series = {Veröffentlichungen der Indologischen Kommission der Akademie der Wissenschaften und der Literatur Mainz}, 
   editor    = {Krause-Stinner, Susanne},
   year      = {2014},
   publisher = {Harrassowitz Verlag},
+  address   = {Wiesbaden},
   keywords  = {primary},
 }%!
 
@@ -1961,9 +1977,11 @@ keywords={printsource},
 @book{harimoto2014,
   title={God, Reason, and Yoga: A Critical Edition and Translation of the Commentary Ascribed to Śaṅkara on Pātañjalayogaśāstra 1.23—28},
   editor={Harimoto, Kengo},
+  series={Indian and Tibetan Studies},
+  volume={1},
   year={2014},
   publisher={Department of Indian and Tibetan Studies, Asien-Afrika-
-Institut, Universitätt Hamburg},
+Institut, Universität Hamburg},
   address={Hamburg},
   keywords={seclit},
 }%!
@@ -2209,13 +2227,13 @@ Sound},
    keywords={seclit},
 }%!
 
-@article{birch2019saiva,
+@misc{birch2019saiva,
    title={The Tantric Śaiva Origins of Rājayoga},
    author={Birch, Jason},
-year={2019}, 
-note={Presented at the Conference of the Society for Tantric Studies, Flagstaff, Arizona, on 28 September 2019.},
-  howpublished = {\url{https://www.academia.edu/40467193/The_Tantric_Śaiva_Origins_of_Rājayoga}},
-  note = {\url{https://www.academia.edu/40467193/The_Tantric_Śaiva_Origins_of_Rājayoga}; Zugriff: 04.05.2023},
+   year={2019}, 
+   note={Presented at the Conference of the Society for Tantric Studies, Flagstaff, Arizona, on 28 September 2019.},
+   howpublished = {\url{https://www.academia.edu/40467193/The_Tantric_Śaiva_Origins_of_Rājayoga}},
+   note = {\url{https://www.academia.edu/40467193/The_Tantric_Śaiva_Origins_of_Rājayoga}; Zugriff: 04.05.2023},
    keywords={seclit},
 }%!
 
@@ -2500,6 +2518,9 @@ keywords={primary},
 
 @book{goodall2016,
   title={Tantric Studies: Fruits of a Franco-German Project on Early Tantra},
+  series={Early Tantra Series},
+  volume={4}, 
+  note={Collection Indologie~131},
   author={Goodall, Dominic and Isaacson, Harunaga},
   year={2016},
   publisher={Institut Français de Pondichéry / Ecole française d’Extrême-Oriente},
@@ -2511,6 +2532,9 @@ keywords={primary},
   title={How the Tattvas of Tantric Śaivism Came to Be 36: The Evidence of the \emph{Niśvāsatattvasaṃhitā}},
   author={Goodall, Dominic},
   booktitle={Tantric Studies: Fruits of a Franco-German Project on Early Tantra},
+  series={Early Tantra Series},
+  note={Collection Indologie~131},
+  volume={4}, 
   editor={Goodall, Dominic and Isaacson, Harunaga},
   pages={77--112},
   year={2016},
@@ -2691,6 +2715,19 @@ keywords={seclit},
   keyword={seclit},
 }%!
 
+@article{hypo,
+  title={Voluntary Hypometabolism in an Indian Yogi},
+  author= {Heller, Craig H. and Elsner, Robert and Nageswara, Rao},
+  year= {1987},
+  journal= {Journal of Thermal Biology},
+  volume= {12},
+  number= {2},
+  pages= {171--173},
+  publisher= {Pergamon Journals Ltd},
+  address= {Headington},  
+ keywords={seclit},
+}%!
+
 @article{molen1981,
   title={Aims and Method of Javanese Philology},
   author= {Van der Molen, W.},
@@ -2844,7 +2881,7 @@ keywords={primary},
   publisher =  {Halle},
   series    = {Studia Indologica Universitatis Halensis},
   volume =  {7}, 
-   note      = {Textgattung: Kāvya — Sachkategorie: Politik/Staat/Gesellschaft — Datierung: 15. Jhd. — Region: Kaschmir},
+  % note      = {Textgattung: Kāvya — Sachkategorie: Politik/Staat/Gesellschaft — Datierung: 15. Jhd. — Region: Kaschmir},
   keywords = {seclit},
 }%!
 
@@ -3317,9 +3354,10 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 }%!
 
 @misc{gsatacod,
-   title={Gorakṣaśataka},  
-   subtitle={Gorakṣaśataka of Gorakṣa},
-   howpublished={Ms No. R 7874. Government Oriental Manuscripts Library, Chennai},
+   title={Gorakṣaśataka},
+   author={Gorakṣaśataka of Gorakṣa},
+   %subtitle={Gorakṣaśataka},
+   howpublished={Ms. No. R7874. Government Oriental Manuscripts Library, Chennai},
    keywords={primary},
 }%!
 
@@ -3331,7 +3369,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 
 @book{petersburger,
   title={Sanskrit Wörterbuch},
-  author={Boethling, O. und Roth, R.},
+  author={Boethlingk, O. und Roth, R.},
   year={1858},  
   volume={2},
   address={Petersburg},
@@ -3470,7 +3508,7 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
   volume={16}, 
   pages={241-269}, 
   publisher={Oxford University Press},
-  doi={https://doi.org/10.1093/jhs/hiad017},  
+ % doi={https://doi.org/10.1093/jhs/hiad017},  
   address={Oxford},
   keywords={seclit}, 
 }%!
@@ -4008,7 +4046,8 @@ address={Delhi},
    author={Muller-Ortega, Paul Eduardo},
    year={1989},
    publisher={State University of New York Press},
-   note={Studie zum bei Abhinavagupta zentralen Symbol des "Herzens" v.a. auf Basis von Parātriśikā Laghuvṛtti; der Anhang enthält die erste englische Übersetzung des kurzen Textes.},
+   series={SUNY series in the Shaiva Traditions of Kashmir},
+   %note={Studie zum bei Abhinavagupta zentralen Symbol des "Herzens" v.a. auf Basis von Parātriśikā Laghuvṛtti; der Anhang enthält die erste englische Übersetzung des kurzen Textes.},
    address={New York},
    keywords={seclit},
 }%!
@@ -4034,12 +4073,12 @@ address={Delhi},
 }%!
 
 @misc{tantraloka,
-   title={Tantrāloka},
+   title={Tantrāloka (b)},
    subtitle={Tantrāloka},
    year={1938},
    author={Shastri, Mukunda Ram and Shastri, Madhusudan Kaul},
    howpublished={Vol. 1-12},
-   publisher={Jammu and Kashmir (under the patronage of Maharaja Harisingh},
+   publisher={Jammu and Kashmir (under the patronage of Maharaja Harisingh)},
    note={Jammu},
    url={https://archive.org/details/tantraloka},
     keywords={primary},
