included jim mallinsons corrections until end of edition yeah

--- a/intro.bib
+++ b/intro.bib
@@ -2198,7 +2198,7 @@ Sound},
 
 @article{white2011,
  title={On the Magnitude of the Yogic Body},
- editor={Munoz, Adrian and Lorenzen, David N.},
+ editor={Muñoz, Adrian and Lorenzen, David N.},
  booktitle={Yogi Heroes and Poets: Histories and Legends of the Nāths},
  year={2011},
  pages={79--90},
@@ -3073,13 +3073,13 @@ keywords={primary},
 }%!
 
 @misc{sardha,
-title={Sārddhatriśatikālottara},
-subtitle={Sārddhatriśatikālottara},
+title={Sārdhatriśatikālottara},
+subtitle={Sārdhatriśatikālottara},
 editor={Bhatt, N. R.},
 year={1979},
 publisher={Institute Francise De Pondicherry},
 address={Pondicherry},
-    keywords={primary},
+keywords={primary},
 }%!
 
 @misc{rudrayamala1937,
@@ -3491,8 +3491,8 @@ howpublished={Ms. No. 46/440. Unpublished manuscript. Bhārat Itihās Samśodhak
 }%!
 
 @misc{gorakbhani,
-  title={Gorakhbhāṇī},
-  subtitle={Gorakhbhāṇī},
+  title={Gorakhbāṇī},
+  subtitle={Gorakhbāṇī},
   editor={Baḍathvāl, P. D.},
   year={1960},
   publisher={Hindī Sāhity Sammelan},
