final collation and ready for print with new layout until end of cakra four

--- a/intro.tex
+++ b/intro.tex
@@ -2524,10 +2524,10 @@ madhyamā vāk\dd{}
 % In its middle exists a \textit{cakra} with five angles.
 % -----------------------
 \app{\lem[wit={ceteri}, alt={tanmadhye pañca°}]{tanmadhye pañca}
-  \rdg[wit={L}]{\om}}
-    \app{\lem[wit={ceteri}, alt={°koṇaṃ}]{koṇaṃ}
+  \rdg[wit={L}]{\om}
+}\app{\lem[wit={ceteri}, alt={°koṇaṃ}]{koṇaṃ}
   \rdg[wit={J}]{°koṇakaṃ}
-  \rdg[wit={L}]{\om}}/
+  \rdg[wit={L}]{\om}} cakraṃ
 \app{\lem[wit={ceteri}]{vartate}
   \rdg[wit={L}]{\om}}/
 %-----------------------
@@ -2545,7 +2545,7 @@ madhyamā vāk\dd{}
 %-----------------------
 %In its middle is a single (divine) form. 
 %-----------------------
-\app{\lem[wit={ceteri}, alt={tanmadhye}]{ta:\\nmadhye}
+\app{\lem[wit={ceteri}, alt={tanmadhye}]{tanmadhye}
   \rdg[wit={L}]{\om}}
 \app{\lem[wit={ceteri}]{ekā}
   \rdg[wit={L}]{\om}}
